# SEPA

./: .env  .gitignore  README.md  SEPA_Template  hits.csv  poety env  pyproject.toml  pyproject.toml.broken  requirements.txt  risk_plan.csv  run_screener.py  sepa_trade_project.txt  setup_dirs.py
.github/workflows/: ci.yml
configs/: config.yaml
data/: DROP_CNT_BY_FILTER.csv  open_positions.csv  screening_results.csv  screening_results_weekly.csv  universe_cache.csv
data/processed/: sepa_candidates.csv
reports/: trades.csv  vectorbt_stats.csv
results/: vcp_backtest_20250713.csv  vcp_backtest_20250714.csv  vcp_backtest_20250715.csv
scripts/: auto_bot.py  backtest_vcp.py  batch_backtest.py  dashboard.py  debug_small_batch.py  demo_screen.py  download_tickers.py  fetch_daily.py  generate_weekly_signals.py  monitor_trailing.py  plot_hits.py  run_backtest.py  run_full_pipeline.py  run_live.py  run_official_screen.py  run_screen.py  test_vcp.py  test_volume_breakout.py  weekly_exit_simple.py
sepa/: breakout.py  fundamentals.py  patterns.py  risk.py  trend.py
sepa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sepa/broker/: webull_client.py
sepa/pipeline/: __init__.py  pipeline.py  weekly.py
sepa/utils/: broker.py  (+2 more)
sepa_trade/: data_fetcher.py  fundamentals.py  rs.py  technical.py  technical_weekly.py
tests/: test_api_connectivity.py  test_exit_strategy.py  test_trend.py  test_vcp_strategy.py  test_webull_client.py  test_weekly_template.py
universes/: SP500.csv  make_sp500_csv.py  nasdaq.csv  nyse.csv  tickers_from_csv.py  update_universe_csvs.py
(+6 files in other folders)
