[project]
name = "sepa"
version = "0.1.0"
description = "Minervini SEPA trading pipeline"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ----★ 追加ここから ---------------------------------
[tool.setuptools.packages.find]
include = ["sepa*"]      # sepa パッケージだけを対象にする
# ----★ 追加ここまで ---------------------------------
