[tool.poetry]
name = "sepa-project"
version = "0.1.0"
description = ""
authors = ["Yo <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
